<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_drawer"
    android:layout_marginTop="20dp"
    tools:context="com.example.abhi.bank.Transfer"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--    <Spinner
        android:id="@+id/mainSpin"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>-->

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/from"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" android:layout_marginStart="10dp" />
    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/txtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" android:layout_marginStart="10dp" />

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" android:layout_marginStart="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/txtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/amount"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" android:layout_marginStart="10dp" />

        <EditText
            android:id="@+id/transferAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="18sp" android:layout_marginStart="10dp" />
    </LinearLayout>

        <Button
            android:id="@+id/btnAction"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@color/colorAccent"
            android:onClick="onTransfer"
            android:text="@string/transfer"
            android:textSize="18sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnBalance"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/view_balance"
            android:textSize="18sp" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:id="@+id/navigation_view">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
